ansible/roles/app/templates/kubernetes-prod/mongo-express.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
spec:
  selector:
    app: mongo-express
  ports:
    - port: 8081
      targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:0.54.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 300m
              memory: 128Mi
          ports:
            - containerPort: 8081
