ansible/roles/app/templates/kubernetes-prod/mongo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5.0.8
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-config
              subPath: mongod.conf
              mountPath: /etc/mongod.conf
            - name: data-volume
              mountPath: /data
      volumes:
        - name: mongo-config
          configMap:
            name: mongo-config-map
            items:
              - key: mongod.conf
                path: mongod.conf
  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 15Gi
