ansible/roles/app/templates/kubernetes-prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  name: ingress
spec:
  rules:
  - host: api.gitnavi.dev
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.gitnavi.dev
    secretName: kubernetes-tls
